<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="estate_image_desc">Estate image</string>
    <string name="price">%1$1d\$</string>
    <string name="estate_detail_media_text">Media</string>
    <string name="estate_detail_description_text">Description</string>
    <string name="estate_detail_surface_icon_desc">Surface icon</string>
    <string name="estate_detail_surface_text">Surface</string>

    <string name="surface">%1$d m²</string>
    <string name="estate_detail_room_icon_desc">Room icon</string>
    <string name="estate_detail_room_text">Number of rooms</string>
    <string name="estate_detail_bathroom_text">Number of bathrooms</string>
    <string name="estate_detail_bedroom_icon_desc">Bedroom icon</string>
    <string name="estate_detail_bathroom_icon_desc">Bathroom icon</string>
    <string name="estate_detail_bedroom_text">Number of bedrooms</string>
    <string name="estate_detail_location_text">Location</string>

    <string name="estate_image_image_desc">%1$s image</string>
    <string name="item_map_title">Map</string>
    <string name="item_settings_title">Settings</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_text">Sign in</string>
    <string name="login_background_desc">Background image, estate manager agent</string>
    <string name="item_logout_title">Logout</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="password_min_length_error">The password must have at least %d characters</string>
    <string name="email_error">Please enter a valid email format</string>
    <string name="login_sign_in_error_text">You\'ve entered the wrong email or password.</string>
    <string name="item_add_estate_title">Add a new estate</string>
    <string name="item_search_estate_title">Search estates</string>
    <string name="item_edit_estate_title">Edit estate</string>
    <string name="preference_theme_title">Theme</string>
    <string name="header_background_desc">Header background image, a nice house</string>
    <string name="header_profile_image_desc">Your profile image</string>
    <string name="add_text">Add</string>
    <string name="address_hint">Address</string>
    <string name="address_helper_text">Choose the address</string>
    <string name="description_hint">Description</string>
    <string name="description_helper_text">Add a description</string>
    <string name="item_check_title">Confirm</string>
    <string name="type_text">Type</string>
    <string name="details_text">Details</string>
    <string name="price_text">Price</string>
    <string name="add_photo_image_desc">The photo to be added</string>
    <string name="edit_estate_title">Edit estate</string>
    <string name="add_estate_title">Add estate</string>
    <string name="edit_estate_image_title">Edit estate image</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_photo_empty_description_error_text">The description can\'t be empty</string>
    <string name="for_sale">For sale</string>
    <string name="sold">Sold</string>
    <string name="add_estate_state_text">State</string>
    <string name="sync_notification_channel_name">Sync</string>
    <string name="estates_sync_notification_message">All the estates has been syncronzied to the server</string>
    <string name="edit_estate_offline_error_text">You have no internet connection, the estate will be uploaded once Internet is back</string>
    <string name="near_text">Near</string>
    <string name="filter_surface_text">Surface</string>
    <string name="filter_photo_count_text">Photo count</string>
    <string name="filter_state_text">State</string>
    <string name="filter_title">Filter</string>
    <string name="reset">Reset</string>
    <string name="school_text">School</string>
    <string name="store_text">Store</string>
    <string name="restaurant_text">Restaurant</string>
    <string name="train_station_text">Train station</string>
    <string name="airport_text">Airport</string>
    <string name="estates_sync_notification_title">Estates pushed!</string>
    <string name="my_location_desc">Find my current location</string>
    <string name="choose_photo_title">Choose an option</string>
    <string name="permission_denied_text">Permission denied</string>
    <string name="permission_location_rational_text">We need the location permission to find where you are.</string>
    <string name="retry_text">Retry</string>
    <string name="no_thanks_text">No thanks</string>
    <string name="permission_location_permanently_denied_text">The location permission has been permanently denied.</string>
    <string name="navigate_to_app_settings_text">Go to app settings</string>
    <string name="location_disabled_title">Location disabled</string>
    <string name="location_disabled_message">The location services are disabled, we can\'t find your location.</string>
    <string name="enable_text">Enable</string>
    <string name="estate_detail_label">Estate Info</string>
    <string name="map_label">Map</string>
    <string name="settings_label">Settings</string>
</resources>
