<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.App.Error.Light"
        >

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_background_desc"
            android:scaleType="centerCrop"
            android:src="@raw/login_background"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:background="@color/black"
            />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_appName_margin_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/inputEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvErrorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_error_logging_margin_bottom"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorError"
            android:visibility="invisible"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/inputEmail"
            app:layout_constraintLeft_toLeftOf="@id/inputEmail"
            app:layout_constraintRight_toRightOf="@id/inputEmail"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_input_margin_horizontal"
            android:hint="@string/login_email_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/login_input_max_height"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_password_margin_top"
            android:hint="@string/login_password_hint"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="@id/inputEmail"
            app:layout_constraintRight_toRightOf="@id/inputEmail"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            app:layout_constraintWidth_max="@dimen/login_input_max_height"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/login_login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_login_button_margin_top"
            android:text="@string/login_sign_in_text"
            android:theme="@style/ThemeOverlay.App.Button.Flat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            />

        <include
            android:id="@+id/loadingOverlay"
            layout="@layout/include_loading_overlay"
            android:visibility="invisible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
