<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/filter_height"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tvPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/filter_price_title_margin_left"
                android:layout_marginTop="@dimen/filter_price_title_margin_top"
                android:text="@string/price_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvPriceFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_price_margin_horizontal"
                android:layout_marginTop="@dimen/filter_price_margin_top"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/separatorPrice"
                app:layout_constraintTop_toBottomOf="@id/tvPriceTitle"
                tools:text="1000000$"
                />

            <View
                android:id="@+id/separatorPrice"
                android:layout_width="13dp"
                android:layout_height="3dp"
                android:background="?attr/colorSecondaryVariant"
                android:textAppearance="?attr/textAppearanceHeadline3"
                app:layout_constraintBottom_toBottomOf="@id/tvPriceTo"
                app:layout_constraintLeft_toRightOf="@id/tvPriceFrom"
                app:layout_constraintRight_toLeftOf="@id/tvPriceTo"
                app:layout_constraintTop_toTopOf="@id/tvPriceFrom"
                />

            <TextView
                android:id="@+id/tvPriceTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_price_margin_horizontal"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintLeft_toRightOf="@id/separatorPrice"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvPriceFrom"
                tools:text="2000000$"
                />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSliderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_slider_margin_horizontal"
                android:stepSize="50000"
                android:valueFrom="0"
                android:valueTo="@integer/slider_price_max_value"
                app:labelBehavior="gone"
                app:layout_constraintTop_toBottomOf="@id/tvPriceTo"
                app:values="@array/price_slider_values"
                />

            <TextView
                android:id="@+id/tvNearTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="@id/tvPriceTitle"
                app:layout_constraintTop_toBottomOf="@id/rangeSliderPrice"
                />

            <HorizontalScrollView
                android:id="@+id/scrollViewGroupTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_group_types_margin_top"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNearTitle"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    >

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/groupTypes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:selectionRequired="false"
                        app:singleSelection="false"
                        >

                        <Button
                            android:id="@+id/btnSchool"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/school_text"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            app:icon="@drawable/ic_outline_school"
                            app:iconGravity="top"
                            />

                        <Button
                            android:id="@+id/btnStore"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/store_text"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            app:icon="@drawable/ic_outline_shop"
                            app:iconGravity="top"
                            />

                        <Button
                            android:id="@+id/btnRestaurant"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurant_text"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            app:icon="@drawable/ic_outline_restaurant"
                            app:iconGravity="top"
                            />

                        <Button
                            android:id="@+id/btnTrain"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/train_station_text"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            app:icon="@drawable/ic_outline_train"
                            app:iconGravity="top"
                            />

                        <Button
                            android:id="@+id/btnAirport"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/airport_text"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            app:icon="@drawable/ic_outline_local_airport"
                            app:iconGravity="top"
                            />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tvSurfaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/filter_surface_title_margin_top"
                android:text="@string/filter_surface_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="@id/tvPriceTitle"
                app:layout_constraintTop_toBottomOf="@id/scrollViewGroupTypes"
                />

            <TextView
                android:id="@+id/tvSurfaceFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_price_margin_horizontal"
                android:layout_marginTop="@dimen/filter_surface_margin_top"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/separatorPrice"
                app:layout_constraintTop_toBottomOf="@id/tvSurfaceTitle"
                tools:text="35.4m²"
                />

            <View
                android:id="@+id/separatorSurface"
                android:layout_width="13dp"
                android:layout_height="3dp"
                android:background="?attr/colorSecondaryVariant"
                android:textAppearance="?attr/textAppearanceHeadline3"
                app:layout_constraintBottom_toBottomOf="@id/tvSurfaceTo"
                app:layout_constraintLeft_toRightOf="@id/tvPriceFrom"
                app:layout_constraintRight_toLeftOf="@id/tvPriceTo"
                app:layout_constraintTop_toTopOf="@id/tvSurfaceTo"
                />

            <TextView
                android:id="@+id/tvSurfaceTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_price_margin_horizontal"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintLeft_toRightOf="@id/separatorPrice"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvSurfaceFrom"
                tools:text="80m²"
                />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSliderSurface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stepSize="10"
                android:valueFrom="0"
                android:valueTo="@integer/slider_surface_max_value"
                app:labelBehavior="gone"
                app:layout_constraintLeft_toLeftOf="@id/rangeSliderPrice"
                app:layout_constraintRight_toRightOf="@id/rangeSliderPrice"
                app:layout_constraintTop_toBottomOf="@id/tvSurfaceTo"
                app:values="@array/surface_slider_values"
                />

            <TextView
                android:id="@+id/tvTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="@id/tvPriceTitle"
                app:layout_constraintTop_toBottomOf="@id/rangeSliderSurface"
                />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_height"
                app:layout_constraintLeft_toLeftOf="@id/rangeSliderSurface"
                app:layout_constraintRight_toRightOf="@+id/rangeSliderSurface"
                app:layout_constraintTop_toBottomOf="@id/tvTypeTitle"
                />

            <TextView
                android:id="@+id/tvPhotoCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_photo_count_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="@id/tvPriceTitle"
                app:layout_constraintTop_toBottomOf="@id/spinnerType"
                />

            <Spinner
                android:id="@+id/spinnerPhotoCount"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_height"
                app:layout_constraintLeft_toLeftOf="@id/rangeSliderSurface"
                app:layout_constraintRight_toRightOf="@id/rangeSliderSurface"
                app:layout_constraintTop_toBottomOf="@id/tvPhotoCount"
                />

            <TextView
                android:id="@+id/tvStateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_state_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintLeft_toLeftOf="@id/tvPriceTitle"
                app:layout_constraintTop_toBottomOf="@id/spinnerPhotoCount"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/groupState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/filter_group_types_margin_horizontal"
                android:layout_marginTop="@dimen/filter_group_types_margin_top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStateTitle"
                app:selectionRequired="false"
                app:singleSelection="true"
                >

                <Button
                    android:id="@+id/btnForSale"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_sale"
                    />

                <Button
                    android:id="@+id/btnSold"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold"
                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>

